# ag-ui

./: .coderabbit.yaml  .cursorrules.mcp  .dockerignore  .gitignore  .pnpmfile.cjs  .sentinel-ci.yml  BEFORE-MERGE.md  CLAUDE.md  COMMENTS.md  CONTRIBUTING.md  COPILOT_FIXES.md  Dockerfile  LLM.md  README.md  REVIEW-issue-1109.md  ag-ui-golang-sdk.code-workspace  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  render.yaml  turbo.json
integrations/adk-middleware/python/examples/: GOOGLE_A2UI_PROOF_POINT.md  pyproject.toml
integrations/adk-middleware/python/examples/other/: complete_setup.py  configure_adk_agent.py  context_usage.py  simple_agent.py
integrations/adk-middleware/python/examples/server/: __init__.py
integrations/ag2/python/examples/: README.md  pyproject.toml
integrations/ag2/python/examples/ag2_agui_examples.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
integrations/ag2/python/examples/server/: __init__.py
integrations/aws-strands/python/examples/: README.md  pyproject.toml
integrations/aws-strands/python/examples/server/: model_factory.py
integrations/claude-agent-sdk/python/: .env.local  .env.local.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  IMPLEMENTATION_STATUS.md  README.md  TEST_SUMMARY.md  USAGE_GUIDE.md  pyproject.toml  pytest.ini
integrations/claude-agent-sdk/python/ag_ui_claude_sdk/: __init__.py  adapter.py  interrupts.py  types.py  utils.py
integrations/claude-agent-sdk/python/examples/: Dockerfile  README.md  pyproject.toml  server.py  test_client.py
integrations/claude-agent-sdk/python/examples/agents/: __init__.py  agentic_chat.py  backend_tool_rendering.py  human_in_the_loop.py  interrupt.py  shared_state.py  tool_based_generative_ui.py
integrations/claude-agent-sdk/python/examples/server/: fastapi_server.py
integrations/claude-agent-sdk/python/src/ag_ui_claude/: __init__.py  claude_agent.py  endpoint.py  event_translator.py  execution_state.py  session_manager.py  tool_adapter.py
integrations/claude-agent-sdk/python/tests/: __init__.py  conftest.py  test_claude_agent.py  test_endpoint.py  test_event_translator.py  test_integration_basic.py  test_integration_sessions.py  test_integration_tools.py  test_interrupts.py  test_real_api.py  test_session_manager.py  test_tool_adapter.py
integrations/cli-agent-orchestrator/python/examples/: README.md  pyproject.toml
integrations/cli-agent-orchestrator/python/examples/server/: __init__.py  agentic_chat.py  human_in_the_loop.py  interrupt.py  shared_state.py
integrations/community/swarms/python/: .gitignore  README.md  pyproject.toml
integrations/community/swarms/python/examples/: .gitignore  README.md  pyproject.toml
integrations/community/swarms/python/swarms_agui/: __init__.py  adapter.py
integrations/crew-ai/python/: README.md  pyproject.toml
integrations/crew-ai/python/ag_ui_crewai/: sdk.py
integrations/langroid/python/: pyproject.toml
integrations/langroid/python/examples/: .gitignore  README.md  pyproject.toml
integrations/langroid/python/tests/: test_endpoint.py
integrations/openai-agents/python/: .gitignore  README.md  pyproject.toml
integrations/openai-agents/python/examples/: .env.example  README.md  pyproject.toml  server.py  translator_server.py
integrations/openai-agents/python/tests/: test_ag_ui_docs_copilot_example.py  test_agent.py  test_endpoint.py  test_engine_mapping.py  test_multimodal.py  test_snapshot.py  test_stream_types_drift.py  test_translator.py  test_translators.py
integrations/openresponses/python/: CHANGELOG.md  FUTURE_EVENTS.md  README.md  pyproject.toml
integrations/openresponses/python/examples/: pyproject.toml
integrations/openresponses/python/server/: Dockerfile  Dockerfile.local  README.md  __init__.py  __main__.py  fly.toml  railway.json  render.yaml
integrations/openresponses/python/tests/: __init__.py
python-sdk/: .gitignore  .pre-commit-config.yaml  pyproject.toml
python-sdk/ag_ui/: __init__.py
python-sdk/ag_ui/core/: __init__.py  events.py  types.py
python-sdk/ag_ui/encoder/: encoder.py
python-sdk/tests/: test_encoder.py  test_events.py  test_text_roles.py  test_types.py
rust-sdk/crates/ag-ui-client/: Cargo.toml  README.md
rust-sdk/crates/ag-ui-client/examples/: basic_agent.rs  generative_ui.rs  http_agent.rs  http_agent_example.rs  logging_subscriber.rs  shared_state.rs  sse_example.rs
rust-sdk/crates/ag-ui-client/scripts/: pydantic_ai_server.py  shared_state.py
rust-sdk/crates/ag-ui-client/src/: agent.rs  event.rs  event_handler.rs  http.rs  lib.rs  sse.rs  stream.rs  subscriber.rs
rust-sdk/crates/ag-ui-client/tests/: http_agent_test.rs  sse_test.rs
sdks/community/c++/: CMakeLists.txt  README.md
sdks/community/c++/src/agent/: agent.h  (+2 more)
sdks/community/c++/tests/: CMakeLists.txt  http_request_builder.h  test_activity_events.cpp  test_apply_module.cpp  test_event_handler.cpp  test_event_verifier.cpp  test_http_agent.cpp  test_middleware.cpp  test_sse_parser.cpp  test_sse_server.cpp  test_state_manager.cpp
sdks/python/: pyproject.toml
sdks/python/a2ui_toolkit/: pyproject.toml
sdks/python/a2ui_toolkit/ag_ui_a2ui_toolkit/: __init__.py  recovery.py
sdks/python/a2ui_toolkit/tests/: test_recovery.py  test_toolkit.py
sdks/python/ag_ui/core/: __init__.py  capabilities.py  events.py  types.py
sdks/python/ag_ui/encoder/: encoder.py
sdks/python/ag_ui/proto/: __init__.py  events_pb2.py  patch_pb2.py  types_pb2.py
sdks/python/ag_ui/verify/: __init__.py  verify.py
sdks/python/tests/: test_capabilities.py  test_encoder_proto.py  test_events.py  test_generative_ui.py  test_interrupts.py  test_run_event_usage.py  test_run_finished_event.py  test_subagent.py  test_types.py  test_verify.py
typescript-sdk/integrations/agno/examples/: .gitignore  pyproject.toml
typescript-sdk/integrations/flowise/python/: README.md  pyproject.toml
typescript-sdk/integrations/pydantic-ai/examples/: README.md  pyproject.toml
typescript-sdk/integrations/superoptix/python/: README.md  example_server.py  example_server_advanced.py  pyproject.toml
(+2586 files in other folders)
