[project]
name = "ag-ui"
version = "0.1.9"
description = ""
authors = [
    { name = "Markus Ecker", email = "markus.ecker@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic>=2.11.2,<3.0.0",
]
packages = [
    "ag_ui"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyright>=1.1.403",
    "ruff>=0.12.9",
]
