[project]
name = "ag-ui-crewai"
version = "0.1.5"
description = "Implementation of the AG-UI protocol for CrewAI"
authors = [
    { name = "Markus Ecker", email = "markus.ecker@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "crewai>=0.130.0",
]

[project.scripts]
dev = "ag_ui_crewai.dojo:main"

[tool.ag-ui.scripts]
test = "python -c \"print('Warning: no tests configured for ag-ui-crewai')\""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ag_ui_crewai"]
exclude = [
    "ag_ui_crewai/dojo.py",
    "ag_ui_crewai/examples/**",
]
