[project]
name = "ag_ui_langroid"
version = "0.1.0"
authors = [
    { name = "AG-UI Contributors" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115.12",
    "langroid>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag_ui_langroid"]

[tool.hatch.metadata]
allow-direct-references = true

