[project]
name = "ag-ui-openai-agent-sdk"
version = "0.1.0"
description = "AG-UI integration for OpenAI Agent SDK"
readme = "README.md"
authors = [
    { name = "Abdelrahman Abozied" },
]
requires-python = ">=3.9"
dependencies = [
    "ag-ui-protocol>=0.1.18",
    "openai-agents>=0.8.4",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag_ui_openai_agents"]
