[project]
name = "ag_ui_openresponses"
version = "0.1.0"
description = "AG-UI agent for OpenResponses-compatible endpoints (OpenAI, Azure, HuggingFace, OpenClaw)"
readme = "README.md"
authors = [
    { name = "AG-UI Contributors" }
]
requires-python = ">=3.11"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "openai>=1.60.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag_ui_openresponses"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
