[package]
name = "ag-ui-client"
version = "0.1.0"
edition = "2024"

[dependencies]
ag-ui-core = { path = "../ag-ui-core"}
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["v4"] }
futures = "0.3.31"
