[project]
name = "aws-strands-server"
version = "0.1.0"
description = "Strands integration server for AG-UI using OpenAI models"
authors = [
    { name = "AG-UI Contributors" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "strands-agents[gemini]>=1.15.0",
    "strands-agents-tools>=0.2.14",
    "ag-ui-strands",
]

[tool.uv.sources]
ag-ui-strands = { path = ".." }

[project.scripts]
dev = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
