[project]
name = "cao-dojo-example-server"
version = "0.1.0"
description = "CLI Agent Orchestrator dojo example server for the AG-UI protocol"
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]

[tool.uv.sources]
ag-ui-protocol = { path = "../../../../sdks/python/" }

[project.scripts]
dev = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
