[project]
name = "ag-ui-openai-agents-examples"
version = "0.1.0"
description = "Example usage of the AG-UI × OpenAI Agents SDK integration"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ag-ui-openai-agents",
    "ag-ui-protocol>=0.1.19",
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
ag-ui-openai-agents = { path = "../", editable = true }

[project.scripts]
dev = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_examples"]
