[tool.poetry]
name = "ag-ui-flowise"
version = "0.0.1"
description = "Flowise integration for AG-UI protocol"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ag_ui_flowise"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
ag-ui = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"